--- a/Question4_with_grid.html
+++ b/Question4_with_grid.html
@@ -6,106 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question 4 -Test Cat - grid</title>
     <style>
- body {
-    margin: 0;
-}
+   body {
+            margin: 0;
+        }
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        img {
+            display: block;
+        }
+        .wrapper {
+            display: grid;
+            grid-template-columns: repeat(2, 460px);
+            grid-gap: 5px;
+        }
+        .expected {
+            background: gray;
+            border:1px solid #000;
+            padding: 25px;
+        }
+        .expected__title {
+            color: #fff;
+            margin-bottom: 10px;
+        }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 
-img {
-    display: block;
-}
+        
+        /* grid format */
+  
+        .card { display: grid}
+        .card > * { grid-row: 1; grid-column: 1}
 
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 460px);
-    grid-gap: 5px;
-}
+        .card {
+            background: gray;
+            border: 1px solid #000;
+            padding: 25px;
+        }
 
-.expected {
-    background: gray;
-    border: 1px solid #000;
-    padding: 25px;
-}
+        .card__image {
+            width: 100%;
+            height: auto;
+        }
 
-.expected__title {
-    color: #fff;
-    margin-bottom: 10px;
-}
- /* grid format */
- .card {
-    display: grid;
-}
-.card > * {
-    grid-row: 1;
-    grid-column: 1;
-}
-/* Card Styling */
-.card {
-    display: grid;
-    grid-template-rows: 50px 1fr auto 50px;
-    grid-template-columns: 1fr 50px;
-    background: gray;
-    border: 1px solid #000;
-    padding: 25px;
-}
+        .card__content {
+            display: grid;
+            grid-template-rows: auto auto auto;
+          
+            margin-top: 10px;
+        }
 
-.card__image {
-    grid-row: 1 / 5; /* Image spans all rows */
-    grid-column: 1 / 3;
-    width: 100%;
-    height: auto;
-}
+        .card__like{
+            justify-self: right;
+            margin: 25px;
+        }
+        .card__like img{
+            border-radius: 15px;
+        }
+        .card__play {
+            justify-items: center;
+            text-decoration: none;
+            text-align: center;
+            color: #000;
+            margin: auto;
+            height: 50px;
+            padding: 10px;
+            background: #fff;
+            width: 200px;
+            border-radius: 15px;
+            font-weight: 800;
+        }
 
-/* Like Button in the Top-Right */
-.card__like {
-    grid-row: 1;
-    grid-column: 2;
-    justify-self: end;
-    align-self: start;
-    margin: 10px;
-}
-.card__like img {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}
+        .card__info {
+            margin-top: 10px;
+            text-align: center;
+        }
 
-/* Center Play Button */
-.card__play {
-    grid-row: 2;
-    grid-column: 1 / 3;
-    text-decoration: none;
-    color: #000;
-    background: #fff;
-    padding: 10px 20px;
-    border-radius: 25px;
-    font-weight: bold;
-    font-size: 18px;
-    text-align: center;
-    width: 200px;
-    margin: auto;
-}
+        .card__provider {
+            display: block;
+            color: #fff;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
 
-/* Info Text at the Bottom */
-.card__info {
-    grid-row: 4;
-    grid-column: 1 / 3;
-    text-align: center;
-    color: #fff;
-}
-.card__provider {
-    display: block;
-    font-weight: bold;
-}
-.card__description {
-    display: block;
-}
-
+        .card__description {
+            display: block;
+            color: #fff;
+        }
 
 
     </style>
